changes from code review
extracted auth service layer
fixed dependencies
fixed http collection
replaced autowiring with constructor dependency injection