@@ -1,23 +1,21 @@
 package com.tx.travel.controller;
 
-import com.tx.travel.commons.oauth.security.ERole;
 import com.tx.travel.model.Role;
 import com.tx.travel.model.User;
 import com.tx.travel.payload.request.LoginRequest;
 import com.tx.travel.payload.request.SignupRequest;
 import com.tx.travel.payload.response.MessageResponse;
 import com.tx.travel.payload.response.UserInfoResponse;
-import com.tx.travel.repository.RoleRepository;
-import com.tx.travel.repository.UserRepository;
 import com.tx.travel.security.jwt.JwtUtils;
 import com.tx.travel.security.services.UserDetailsImpl;
-import java.util.HashSet;
+import com.tx.travel.service.AuthService;
+import com.tx.travel.service.exception.EmailAlreadyExistsException;
+import com.tx.travel.service.exception.UsernameAlreadyExistsException;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.validation.Valid;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -31,40 +29,49 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ResponseStatusException;
 
 @CrossOrigin(origins = "*", maxAge = 3600)
 @RestController
 @RequestMapping("/api/auth")
 public class AuthController {
-  public static final String ERROR_ROLE_NOT_FOUND = "Error: Role is not found.";
-  @Autowired AuthenticationManager authenticationManager;
 
-  @Autowired UserRepository userRepository;
+  final AuthenticationManager authenticationManager;
 
-  @Autowired RoleRepository roleRepository;
+  final AuthService authService;
 
-  @Autowired PasswordEncoder encoder;
+  final PasswordEncoder encoder;
 
-  @Autowired JwtUtils jwtUtils;
+  final JwtUtils jwtUtils;
+
+  public AuthController(
+      final AuthenticationManager authenticationManager,
+      final AuthService authService,
+      final PasswordEncoder encoder,
+      final JwtUtils jwtUtils) {
+    this.authenticationManager = authenticationManager;
+    this.authService = authService;
+    this.encoder = encoder;
+    this.jwtUtils = jwtUtils;
+  }
 
   @PostMapping("/signin")
-  public ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginRequest loginRequest) {
+  public ResponseEntity<UserInfoResponse> authenticateUser(
+      @Valid @RequestBody final LoginRequest loginRequest) {
 
-    Authentication authentication =
+    final Authentication authentication =
         authenticationManager.authenticate(
             new UsernamePasswordAuthenticationToken(
                 loginRequest.getUsername(), loginRequest.getPassword()));
 
     SecurityContextHolder.getContext().setAuthentication(authentication);
 
-    UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+    final UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
 
-    ResponseCookie jwtCookie = jwtUtils.generateJwtCookie(userDetails);
+    final ResponseCookie jwtCookie = jwtUtils.generateJwtCookie(userDetails);
 
-    List<String> roles =
-        userDetails.getAuthorities().stream()
-            .map(GrantedAuthority::getAuthority)
-            .collect(Collectors.toList());
+    final List<String> roles =
+        userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
 
     return ResponseEntity.ok()
         .header(HttpHeaders.SET_COOKIE, jwtCookie.toString())
@@ -74,72 +81,36 @@ public class AuthController {
   }
 
   @PostMapping("/signup")
-  public ResponseEntity<?> registerUser(@Valid @RequestBody SignupRequest signUpRequest) {
-    if (userRepository.existsByUsername(signUpRequest.getUsername())) {
-      return ResponseEntity.badRequest()
-          .body(new MessageResponse("Error: Username is already taken!"));
-    }
+  public ResponseEntity<?> registerUser(@Valid @RequestBody final SignupRequest signUpRequest) {
 
-    if (userRepository.existsByEmail(signUpRequest.getEmail())) {
-      return ResponseEntity.badRequest()
-          .body(new MessageResponse("Error: Email is already in use!"));
+    try {
+      authService.findByUsernameOrEmail(signUpRequest.getUsername(), signUpRequest.getEmail());
+
+    } catch (final UsernameAlreadyExistsException | EmailAlreadyExistsException e) {
+      throw new ResponseStatusException(HttpStatus.CONFLICT, e.getMessage(), e);
     }
 
     // Create new user's account
-    User user =
+    final User user =
         new User(
             signUpRequest.getUsername(),
             signUpRequest.getEmail(),
             encoder.encode(signUpRequest.getPassword()));
 
-    Set<String> strRoles = signUpRequest.getRole();
-    Set<Role> roles = new HashSet<>();
+    final Set<String> strRoles = signUpRequest.getRole();
 
-    if (strRoles == null) {
-      Role userRole =
-          roleRepository
-              .findByName(ERole.ROLE_EMPLOYEE)
-              .orElseThrow(() -> new RuntimeException(ERROR_ROLE_NOT_FOUND));
-      roles.add(userRole);
-    } else {
-      strRoles.forEach(
-          role -> {
-            switch (role) {
-              case "admin":
-                Role adminRole =
-                    roleRepository
-                        .findByName(ERole.ROLE_ADMIN)
-                        .orElseThrow(() -> new RuntimeException(ERROR_ROLE_NOT_FOUND));
-                roles.add(adminRole);
-
-                break;
-              case "mod":
-                Role modRole =
-                    roleRepository
-                        .findByName(ERole.ROLE_OFFICE_MANAGER)
-                        .orElseThrow(() -> new RuntimeException(ERROR_ROLE_NOT_FOUND));
-                roles.add(modRole);
-
-                break;
-              default:
-                Role userRole =
-                    roleRepository
-                        .findByName(ERole.ROLE_EMPLOYEE)
-                        .orElseThrow(() -> new RuntimeException(ERROR_ROLE_NOT_FOUND));
-                roles.add(userRole);
-            }
-          });
-    }
+    final Set<Role> roles = authService.addRoles(strRoles);
 
     user.setRoles(roles);
-    userRepository.save(user);
+
+    authService.addUser(user);
 
     return ResponseEntity.ok(new MessageResponse("User registered successfully!"));
   }
 
   @PostMapping("/signout")
-  public ResponseEntity<?> logoutUser() {
-    ResponseCookie cookie = jwtUtils.getCleanJwtCookie();
+  public ResponseEntity<MessageResponse> logoutUser() {
+    final ResponseCookie cookie = jwtUtils.getCleanJwtCookie();
     return ResponseEntity.ok()
         .header(HttpHeaders.SET_COOKIE, cookie.toString())
         .body(new MessageResponse("You've been signed out!"));
